request history integration and insights page fix

--- a/funktor-demo/server/src/main/resources/config/application.dev.conf
+++ b/funktor-demo/server/src/main/resources/config/application.dev.conf
@@ -16,7 +16,14 @@ ktor {
   }
 
   application {
-    id = "Aktor | Dev"
+    id = "Funktor-Demo | Dev"
+  }
+}
+
+funktor {
+  vault {
+    profile: true
+    explain: true
   }
 }
 
@@ -32,7 +39,7 @@ api {
   baseUrl = "http://api.funktor-demo.local:36587"
   insights {
     enabled = true
-    baseUrl = "http://admin.funktor-demo.local:8101/_/insights/details"
+    baseUrl = "http://admin.funktor-demo.local:36587/_/insights/details"
   }
 }
 
@@ -42,8 +49,4 @@ arangodb {
   host: "localhost"
   port: 8529
   database: "funktor-demo-dev"
-  flags {
-    enableProfiler: true
-    enableExplain: false
-  }
 }
