request history integration and insights page fix

--- a/funktor-demo/server/src/main/resources/config/application.dev.conf
+++ b/funktor-demo/server/src/main/resources/config/application.dev.conf
@@ -32,14 +32,14 @@ auth {
 }
 
 admin {
-  baseUrl = "http://admin.funktor-demo.local:36587"
+  baseUrl = "http://admin.funktor-demo.localhost:36587"
 }
 
 api {
-  baseUrl = "http://api.funktor-demo.local:36587"
+  baseUrl = "http://api.funktor-demo.localhost:36587"
   insights {
     enabled = true
-    baseUrl = "http://admin.funktor-demo.local:36587/_/insights/details"
+    baseUrl = ${admin.baseUrl}"/_/insights/details"
   }
 }
 
