--- a/funktor-demo/server/src/main/resources/config/application.common.conf
+++ b/funktor-demo/server/src/main/resources/config/application.common.conf
@@ -14,8 +14,13 @@ ktor {
 }
 
 auth {
-  apiJwtPermissionsNs = "permissions"
-  apiJwtUserNs = "user"
+  jwt {
+    issuer = ${ktor.application.id}
+    audience = "api"
+    signingKey = ""
+    permissionsNs = "permissions"
+    userNs = "user"
+  }
 }
 
 aws {
