--- a/detekt.yml
+++ b/detekt.yml
@@ -239,7 +239,7 @@ formatting:
     active: true
     autoCorrect: true
   Filename:
-    active: true
+    active: false
   FinalNewline:
     active: true
     autoCorrect: true
