messaging: - SendGrid email sender - refactoring and quality of life tools

--- a/funktor-demo/server/src/main/resources/config/application.common.conf
+++ b/funktor-demo/server/src/main/resources/config/application.common.conf
@@ -30,3 +30,8 @@ aws {
     secretAccessKey = ${AWS_SES_SECRET_KEY}
   }
 }
+
+sendgrid {
+  apiKey = ${SENDGRID_API_KEY}
+  baseUrl = "https://api.eu.sendgrid.com"
+}
