vault: centralizing SoftDelete from Karango into Vault ultra: removing Cache und sub-classes in favor of Cache4k

--- a/funktor-demo/server/src/main/resources/config/application.common.conf
+++ b/funktor-demo/server/src/main/resources/config/application.common.conf
@@ -33,5 +33,5 @@ aws {
 
 sendgrid {
   apiKey = ${SENDGRID_API_KEY}
-  baseUrl = "https://api.eu.sendgrid.com"
+  baseUrl = "https://api.sendgrid.com"
 }
