Funktor:Auth: password reset flow (started)

--- a/funktor-demo/server/src/main/resources/config/application.common.conf
+++ b/funktor-demo/server/src/main/resources/config/application.common.conf
@@ -13,14 +13,20 @@ ktor {
   }
 }
 
-auth {
-  jwt {
-    issuer = ${ktor.application.id}
-    audience = "api"
-    signingKey = ""
-    permissionsNs = "permissions"
-    userNs = "user"
+funktor {
+  auth {
+    jwt {
+      issuer = ${ktor.application.id}
+      audience = "api"
+      signingKey = ""
+      permissionsNs = "permissions"
+      userNs = "user"
+    }
   }
+}
+
+keys {
+  include "keys.env.conf"
 }
 
 aws {
